# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "ron-wasm"
version = "0.1.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.73.0"
description = "Wasm Bindings for RON"
documentation = "https://docs.rs/ron-wasm"
readme = "README.md"
repository = "https://github.com/sorairolake/ron-wasm"
license = "Apache-2.0 OR MIT"
keywords = ["ron"]
categories = ["encoding", "wasm"]
include = ["/LICENSES", "/README.md", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ron = { version = "0.8.1", features = ["indexmap"] }
serde = "1.0.215"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
