# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "ron-wasm"
version = "0.1.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "Wasm Bindings for RON"
documentation = "https://docs.rs/ron-wasm"
readme = "README.md"
repository = "https://github.com/sorairolake/ron-wasm"
license = "Apache-2.0 OR MIT"
keywords = ["ron"]
categories = ["encoding", "wasm"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ron = { version = "0.10.1", features = ["indexmap"] }
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
